--- a/resources/assets/stylus/blocks/forums/forums.styl
+++ b/resources/assets/stylus/blocks/forums/forums.styl
@@ -16,6 +16,14 @@
   text-align center;
 }
 
+.Forums__TopicHeader__Title--Solved:before {
+  text-rendering: auto;
+  -webkit-font-smoothing: antialiased;
+  font-family: FontAwesome
+  margin-right .1rem;
+  content: "\f00c";
+}
+
 .Forums__Content {
   margin-top: 2rem;
   lost-offset: -1 / 20
