--- a/resources/assets/stylus/blocks/forums/forums_topiclist.styl
+++ b/resources/assets/stylus/blocks/forums/forums_topiclist.styl
@@ -42,3 +42,12 @@
 .Forums__TopicList__Item__NbReplies {
   lost-column: 9/100;
 }
+
+.Forums__TopicList__Item__Subject--Solved:before {
+  text-rendering: auto;
+  -webkit-font-smoothing: antialiased;
+  font-family: FontAwesome
+  margin-right .1rem;
+  content: "\f00c";
+  color: $orange
+}
