--- a/resources/assets/stylus/blocks/forums/forums_messagelist.styl
+++ b/resources/assets/stylus/blocks/forums/forums_messagelist.styl
@@ -123,5 +123,10 @@
   & > .Button {
     background-color: $orange;
     color: $white;
+
+    &[disabled] {
+      background lighten($orange, 12);
+      cursor: not-allowed
+    }
   }
 }
