fix style problem

--- a/resources/assets/stylus/pages/forums.styl
+++ b/resources/assets/stylus/pages/forums.styl
@@ -1,4 +1,9 @@
 .PageForums {
+  .CodeMirror, .CodeMirror-scroll {
+    min-height: 150px;
+    height: 150px;
+  }
+
   .SiteFooter__Inner {
     lost-column: 3/4;
     lost-offset: -1/4;
