--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1258,6 +1258,11 @@ LoginBox__Providers__Provider {
 .LoginBox__Providers__Provider--Twitter a:before {
   content: "\f081";
 }
+.PageForums .CodeMirror,
+.PageForums .CodeMirror-scroll {
+  min-height: 150px;
+  height: 150px;
+}
 .PageForums .SiteFooter__Inner {
   width: calc(99.99% * 3/4 - (30px - 30px * 3/4));
   margin-left: calc(99.99% * (-1/4 * -1) - (30px - 30px * (-1/4 * -1)) + 30px) !important;
