--- a/resources/assets/stylus/app.styl
+++ b/resources/assets/stylus/app.styl
@@ -17,6 +17,7 @@
 @import "blocks/sitefooter"
 @import "blocks/pagination"
 @import "blocks/loginbox"
+@import "blocks/profile/profile"
 
 // pages
 @import "pages/forums"
