--- a/resources/assets/stylus/blocks/buttons.styl
+++ b/resources/assets/stylus/blocks/buttons.styl
@@ -19,7 +19,8 @@
   background-color: $orange;
   color: $white;
   text-decoration none;
-  border-color  1px solid darken($orange, 15%);
+  border  1px solid darken($orange, 15%);
+  padding .3rem .8rem;
   &:focus {
     outline 1px solid darken($orange, 15%);
   }
