--- a/resources/assets/stylus/blocks/buttons.styl
+++ b/resources/assets/stylus/blocks/buttons.styl
@@ -35,6 +35,12 @@
   background-color: $white;
   color: $black;
   text-decoration none;
+  border  1px solid darken($white, 15%);
+  padding .3rem .8rem;
+  &:focus {
+    outline 1px solid darken($white, 15%);
+  }
+
 }
 
 
