--- a/resources/assets/stylus/blocks/forums/forums.styl
+++ b/resources/assets/stylus/blocks/forums/forums.styl
@@ -54,3 +54,33 @@
     lost-column: 1/1
   }
 }
+
+
+
+
+@media screen and (max-width: 980px) {
+
+  .Forum--Sidebar {
+    padding: 1rem;
+  }
+
+
+
+  .Forums__Sidebar {
+    lost-column: 1
+  }
+
+  .Forums__Content {
+    margin-top: 2rem;
+    lost-offset: 0
+    lost-column: 1
+  }
+  
+  .Forums__TopicList__Item__Avatar, .Forums__TopicList__Item__NbReplies, .Forums__MessageList__Message__Side {
+    display: none;
+  }
+
+  .Forums__TopicList__Item__Content, .Forums__MessageList__Message__Content {
+    lost-column: 1;
+  }
+}
