--- a/resources/assets/stylus/blocks/siteheader.styl
+++ b/resources/assets/stylus/blocks/siteheader.styl
@@ -74,3 +74,35 @@
   }
 
 }
+
+
+@media screen and (max-width: 980px) {
+
+  .SiteHeader__Inner {
+    text-align center;
+  }
+  
+  .SiteHeader__Inner__SiteTitle {
+    lost-column: 1;
+  }
+
+  .SiteHeader__Inner__Nav {
+    lost-column: 1;
+  }
+  
+  .SiteHeader__Inner__Nav__Links {
+    float: none;
+    padding: 0;
+    margin: 0;
+  }
+
+  .SiteHeader__Inner__Nav__Links__Link {
+    display: block;
+    padding 0;
+  }
+
+  .SiteHeader__Inner__Nav__Links__Link > a {
+    display block
+    padding .5rem;
+  }
+}
