working on responsive version

--- a/resources/assets/stylus/blocks/forums/forums.styl
+++ b/resources/assets/stylus/blocks/forums/forums.styl
@@ -76,7 +76,7 @@
     lost-column: 1
   }
   
-  .Forums__TopicList__Item__Avatar, .Forums__TopicList__Item__NbReplies, .Forums__MessageList__Message__Side {
+  .Forums__TopicList__Item__Avatar, .Forums__TopicList__Item__NbReplies, .Forums__MessageList__Message__Side, .Forums_MessageList__Message__Content__Buttons {
     display: none;
   }
 
