--- a/resources/assets/stylus/pages/forums.styl
+++ b/resources/assets/stylus/pages/forums.styl
@@ -20,3 +20,19 @@
     lost-offset: -1 / 4;
   }
 }
+
+@media screen and (max-width: 980px) {
+
+  .PageForums {
+    .SiteFooter__Inner {
+      lost-column: 1;
+      lost-offset: 0;
+    }
+
+
+    .Forums__Content__AnswerBlock {
+        padding: 1rem;
+    }
+  }
+
+}
