change highlightjs color

--- a/resources/assets/stylus/app.styl
+++ b/resources/assets/stylus/app.styl
@@ -25,7 +25,7 @@
 
 
 // external
-@import "./../../../node_modules/highlight.js/styles/solarized_dark.css"
+@import "./../../../node_modules/highlight.js/styles/github.css"
 @import "./../../../node_modules/sweetalert/dist/sweetalert.css"
 @import "./../../../node_modules/simplemde/dist/simplemde.min.css"
 @import "./../../../node_modules/font-awesome/css/font-awesome.css"
