--- a/resources/assets/stylus/blocks/form.styl
+++ b/resources/assets/stylus/blocks/form.styl
@@ -9,12 +9,21 @@
 }
 
 .Form__Row__Control {
+  line-height 2rem;
   height 2rem;
   width 100%
   padding: 5px 10px;
 
   &:not([type=file]) {
     border 1px solid $black;
+  }
+
+
+  input[type=checkbox]&, input[type=radio]& {
+    display inline-block;
+    width auto;
+    height auto;
+
   }
 
   select[multiple]& {
