--- a/resources/assets/stylus/blocks/form.styl
+++ b/resources/assets/stylus/blocks/form.styl
@@ -1,3 +1,18 @@
+.Form__Fieldset {
+  border: 0;
+  padding: 0;
+  margin: 0;
+}
+
+.Form__Fieldset__Legend {
+  font-weight: bold;
+  font-size: 1.3rem;
+  border-bottom: 1px solid $orange;
+  display: block;
+  width: 100%;
+  padding-top: 1.5rem;
+}
+
 .Form__Row {
   margin-top 2rem;
 }
