--- a/resources/assets/stylus/app.styl
+++ b/resources/assets/stylus/app.styl
@@ -1,4 +1,4 @@
-@import url("http://fonts.googleapis.com/css?family=Source+Sans+Pro:200,400,700,200italic,400italic,700italic");
+@import url("https://fonts.googleapis.com/css?family=Source+Sans+Pro:200,400,700,200italic,400italic,700italic");
 @import url("https://fonts.googleapis.com/css?family=Ubuntu+Mono:400,400italic,700,700italic");
 
 // general
