--- a/resources/assets/stylus/app.styl
+++ b/resources/assets/stylus/app.styl
@@ -18,6 +18,7 @@
 @import "blocks/pagination"
 @import "blocks/loginbox"
 @import "blocks/profile/profile"
+@import "blocks/badge"
 
 // pages
 @import "pages/forums"
