--- a/resources/assets/stylus/blocks/forums/forums.styl
+++ b/resources/assets/stylus/blocks/forums/forums.styl
@@ -40,12 +40,41 @@
   }
 }
 
-
 @import "./forums_sidebar"
 @import "./forums_categorylabel"
 @import "./forums_topiclist"
 @import "./forums_messagelist"
 @import './forums_searchbar'
+
+
+
+.Forums__MyMessages, .Forums__MyMessages_Message {
+  padding 0;
+  margin 0;
+  list-style none
+}
+
+.Forums__MyMessages__Message {
+  padding: .8rem 1rem;
+  border 1px solid $lightgray
+  margin-bottom 1rem;
+}
+
+.Forums__MyMessages__Message__Link {
+  color: $black;
+  text-decoration none;
+  .Forums__MyMessages__Message:hover &, &:hover {
+    color: $orange;
+  }
+}
+
+.Forums__MyMessages__Message__Subject {
+  @extend .Forums__TopicList__Item__Subject
+}
+
+.Forums__MyMessages__Message__Meta {
+  @extend .Forums__TopicList__Item__Metas__Authoring
+}
 
 
 .Forums--Fullpage {
