--- a/resources/assets/stylus/blocks/modals/modal.styl
+++ b/resources/assets/stylus/blocks/modals/modal.styl
@@ -28,6 +28,8 @@
   padding: 1.7rem 2.2rem;
   background-color: $white;
   transition: all .3s ease;
+  overflow-y: scroll;
+  max-height: 100%;
 }
 
 .Modal__Wrapper__Container__Header__Buttons {
