use easymde instead of simple mde

--- a/src/resources/sass/app.scss
+++ b/src/resources/sass/app.scss
@@ -14,7 +14,7 @@
 @import '~highlight.js/styles/zenburn.css';
 
 // simpleMDE
-@import '~simplemde/dist/simplemde.min.css';
+@import '~easymde/dist/easymde.min.css';
 
 // Sweetalert
 @import "~bootstrap-sweetalert/dist/sweetalert.css";
